--- a/style.css
+++ b/style.css
@@ -81,7 +81,8 @@ text-align: center;
 }
 
 .header .identitas img{
-  width: 40%;
+  margin-top: -200px;
+  width: 60%;
   border-radius: 50%;
 }
 
@@ -102,18 +103,31 @@ font-size: 1.5rem;
 font-size: 4.5rem;
 }
 
+.my-name{
+  font-weight: bolder;
+}
 
 /*Header End*/
 
 /*About Start*/
 .about{
-  min-height: 80vh;
+  min-height: 60vh;
   background-color: black;
   display: flex;
   align-items: center;
   justify-content: center;
   padding-top: 3rem;
 }
+.hobies::after{
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  top: 0;
+  background: linear-gradient(180deg, rgba(1, 1, 3, 1) 8% ,rgba(255, 255, 255, 0) 50%);
+}
+
 
 .about .about-item{
   margin: 0 20%;
@@ -129,15 +143,72 @@ font-size: 4.5rem;
 /*Hobies Start*/
 
 .hobies{
-  min-height: 120vh;
-  display: flex;
-  margin-top: 50px;
   text-align: center;
   align-items: center;
+  display: flex;
+  max-height: 1500px;
   justify-content: center;
   background-image: url(img/2.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   position: relative;
+}
+
+.hobies-content{
+  width: 90%;
+  margin: 600px auto; 
+}
+
+.container{
+  display: flex;
+  width: 90%;
+  height: 900px;
+  margin: 10px auto;
+  border: 5px solid white;
+  overflow: auto;
+}
+
+
+.thumb{
+  width: 200px;
+  border: 2px solid white;
+  box-sizing: border-box;
+}
+
+.thumb:hover{
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+
+@keyframes fadeIn {
+  to{
+    opacity: 1;
+  }
+}
+
+.fade{
+  opacity: 0;
+  animation: fadeIn 0.5s forwards;
+}
+
+.active{
+  opacity: 0.5;
+}
+
+
+/*media Query*/
+
+/*handphone*/
+@media (max-width: 590px){
+  .header .identitas .my-name{
+    font-size: 2.8rem;
+  }
+
+  .header .identitas img{
+  margin-top: -300px;
+  width: 80%;
+  border-radius: 50%;
+}
 }
